# sbme-tutorials.github.io

./: .gitignore  .gitmodules  404.html  Gemfile  README.md  _config.yml  bitbucket-pipelines.yml  feed.xml  git-publish-website  git-publish-website-warning  index.html  index.md
.github/workflows/: convert.yaml
2018/cibec2018/: cibec2018.md  instructions-pc.md
2018/cv/: .gitignore  cv.html  cv.md
2018/cv/assignments/: 1_assignment1.html  1_assignment1.md  2_assignment2.html  2_assignment2.md  3_assignment3.html  3_assignment3.md  4_assignment4.html  4_assignment4.md  bio2018_cv_quiz2_draft.md  project.html  project.md
2018/cv/notes/: 1_week1.html  1_week1.md  2_week2.html  2_week2.md  3_week3.html  3_week3.md  4_week4.html  4_week4.md  5_week5.html  5_week5.md  6_week6.html  6_week6.md  7_week7.html  7_week7.md  8_week8.html  8_week8.md  9_week9.html  9_week9.md  9_week9b.html  9_week9b.md
2018/cv/styles/: laminal.css
2018/data-structures/: README.md  TODO.md  data-structures.html  data-structures.md  faq.html  faq.md  project.html  project.md
2018/data-structures/assignments/: 10_week10.html  10_week10.md  1_week1a.html  1_week1a.md  1_week1b.html  1_week1b.md  1_week1re.html  1_week1re.md  2_week2a.html  2_week2a.md  3_week3a.html  3_week3a.md  3_week3b.html  3_week3b.md  4_week4a.html  4_week4a.md  4_week4b.html  4_week4b.md  7_exercises.html  7_exercises.md  week1a.html  week1a.md
2018/data-structures/notes/: 0_week0.html  0_week0.md  10_week10.html  10_week10.md  11_week11.html  11_week11.md  1_week1a.html  1_week1a.md  1_week1assignment.html  1_week1assignment.md  1_week1b.html  1_week1b.md  2_code_formatting.html  2_code_formatting.md  2_week2a.html  2_week2a.md  3_faq1.html  3_faq1.md  3_faq2.html  3_faq2.md  3_faq3.html  3_faq3.md  3_week3a.html  3_week3a.md  3_week3b.html  3_week3b.md  4_week4a.html  4_week4a.md  4_week4b.html  4_week4b.md  (+13 more)
2018/dsp/: dsp.html  dsp.md
2018/measurements/: measurements.md
2019/CG/: CG.html  CG.md
2019/Database/: introDB.html  introDB.md
2019/biostatistics/: biostatistics.html  biostatistics.md
2019/cv/: cv.html  cv.md
2019/data-structures/: data-structures.html  data-structures.md
2019/intro-to-BME/: intro-to-BME.html  intro-to-BME.md
2019/microprocessor/: microprocessor.html  microprocessor.md
2019/stl-intro/: stl-intro.html  stl-intro.md
2020/AI/: AI.md
2020/CG/: CG.md
2020/CG_HEMN/: CG.md  lab2.c
2020/cv/: cv.html  cv.md  index.md
2020/data-structure-FALL/: index.md
2020/data-structures/: data-structures.html  data-structures.md  index.md
2020/data-structures/snippets/lab05/linkedlists/: CMakeLists.txt  CovidItem.hpp  DLL1.hpp  DLL2.hpp  DLL3.hpp  LL.hpp  download.txt  main.cpp  main_dll1.cpp  main_dll2.cpp  main_dll3.cpp  main_std.cpp
2020/hemn230DataBase/: DB.md
2020/sbe306DataBase/: DB.md
2021/Biostatistics/: Biostatistics.md
2021/CG/: CG.md
2021/CG_HEMN224/: CG_HEMN224.md
2021/cv/: cv.md
_bibliography/: data-structures.bib  references.bib
_includes/: alert.html  footer.html  google-analytics.html  head.html  header.html  important.html  info.html  nb_head.html  note.html  presentation-footer.html  presentation-head.html  presentation-margins.html  tip.html  warning.html
_includes/nb/: head.html
_layouts/: contribution.html  coursepage.html  default.html  faq.html  home.html  nb_default.html  notebook.html  page.html  presentation.html
_plugins/: begin.rb
_site/: 404.html  feed.xml  index.html
_site/about/: index.html
_site/contrib/: boilerplate.html
_site/css/: laminal.css
_site/sbme-tutorials-contrib/: boilerplate.html
about/: index.html
contrib/: boilerplate.html
contrib/students/: amr-ubuntu-installation.html
css/: laminal.css  laminal3.css  laminal4.css  main.css  main.scss
css/bootstrap/: bootstrap.scss
css/custom/: _variables.scss
data-structures/: index.html
data-structures/laminal_demo/: index.html
javascript/: remark.min.js
javascript/twitter/: widgets.js
nbconvert/: fastpages.tpl  nb2post.py
sbme-tutorials-contrib/: boilerplate.html
sbme-tutorials-contrib/students/: amr-ubuntu-installation.html
test/: argv.cpp  calculator  calculator.cpp
(+586 files in other folders)
